--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
+    <link rel="stylesheet" href="scss/main.scss">
 </head>
 <body>
-    
+    <script src="js/index.js"></script>
 </body>
 </html>
