--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
-    <link rel="stylesheet" href="scss/main.scss">
+    <link rel="stylesheet" href="scss/style.scss" />
 </head>
 <body>
+    <div class="container">
+        <div id="home" class="flex-colum flex-center">
+            <h1>Ready up</h1>
+            <a href="/game.html" class="btn">Ready</a>
+        </div>
+    </div>
     <script src="js/index.js"></script>
 </body>
 </html>
