--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="home" class="flex-colum flex-center">
+        <div id="home" class="flex-column flex-center">
             <h1>Ready up</h1>
-            <a href="" class="btn">Ready</a>
+            <a href="/game.html" class="btn">Ready</a>
         </div>
     </div>
     <script src="js/index.js"></script>
